<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">

        <SwitchPreferenceCompat
            app:key="is_call_recording_enabled"
            app:title="@string/call_recording_title"
            app:summaryOff="@string/call_recording_summary_off"
            app:summaryOn="@string/call_recording_summary_on" />

        <CheckBoxPreference
            app:key="start_toast"
            app:title="@string/start_toast"
            app:dependency="is_call_recording_enabled"
            app:summaryOn="@string/start_toast_summary_on"
            app:summaryOff="@string/start_toast_summary_off"/>

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>