<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:id="@+id/fileNameContainerLLinBottomDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/fileNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="?attr/textColor"
            android:textSize="18sp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/selectOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textColor="?attr/textColor"
        android:layout_gravity="center_vertical"
        app:drawableLeftCompat="@drawable/ic_done_24"
        android:drawablePadding="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/playOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:textColor="?attr/textColor"
        android:layout_gravity="center_vertical"
        app:drawableLeftCompat="@drawable/ic_play_circle_24"
        android:drawablePadding="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/shareOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textColor="?attr/textColor"
        android:layout_gravity="center_vertical"
        app:drawableLeftCompat="@drawable/ic_share_24"
        android:drawablePadding="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/renameOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rename"
        android:textColor="?attr/textColor"
        android:layout_gravity="center_vertical"
        app:drawableLeftCompat="@drawable/ic_mode_edit_24"
        android:drawablePadding="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/deleteOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="?attr/textColor"
        android:layout_gravity="center_vertical"
        app:drawableLeftCompat="@drawable/ic_delete_24"
        android:drawablePadding="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/showFileInfoOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/properties"
        android:textColor="?attr/textColor"
        android:layout_gravity="center_vertical"
        app:drawableLeftCompat="@drawable/ic_info"
        android:drawablePadding="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>