<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <TextView
        android:id="@+id/fileNameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="?attr/textColor"
        android:textSize="18sp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="25dp"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/selectOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textColor="?attr/textColor"
        android:layout_gravity="center_vertical"
        app:drawableLeftCompat="@drawable/done_24"
        android:drawablePadding="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/playOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_with"
        android:textColor="?attr/textColor"
        android:layout_gravity="center_vertical"
        app:drawableLeftCompat="@drawable/play_circle_24"
        android:drawablePadding="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/shareOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textColor="?attr/textColor"
        android:layout_gravity="center_vertical"
        app:drawableLeftCompat="@drawable/share_24"
        android:drawablePadding="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/renameOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rename"
        android:textColor="?attr/textColor"
        android:layout_gravity="center_vertical"
        app:drawableLeftCompat="@drawable/mode_edit_24"
        android:drawablePadding="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/deleteOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="?attr/textColor"
        android:layout_gravity="center_vertical"
        app:drawableLeftCompat="@drawable/delete_24"
        android:drawablePadding="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/showFileInfoOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/properties"
        android:textColor="?attr/textColor"
        android:layout_gravity="center_vertical"
        app:drawableLeftCompat="@drawable/info"
        android:drawablePadding="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>